<resources>
    <string name="app_name">Note</string>
    <string name="add">Add</string>
    <string name="addTitle">Note Title</string>
    <string name="addNote">Your Note</string>
    <string name="addNotes">Add Note</string>
    <string name="myNotes">My Notes</string>
    <string name="editNote">Edit Note</string>
    <string name="updatedNote">Note Updated</string>
    <string name="yourMode">Your mode</string>
    <string name="yourColor">Note Color</string>
    <string name="noteSharedSuccessfully">Note shared successfully</string>
    <string name="deleteNotedSuccessfully">Note deleted successfully</string>
    <string name="notHaveNote">You don\'t have any notes, add a new note now</string>


    ------->Mode
    <string name="modeHappy">😀 Happy</string>
    <string name="modeSad">😞 Sad</string>
    <string name="modeNotr">😐 Nötr</string>
    <string name="modeInspiration">🥳 Inspiration Came</string>
    <string name="modeStar">🤩 Star Idea</string>
    <string name="modeApplicationIdea">📱 Application Idea</string>
    <string name="modeWork">💼 Work</string>
    <string name="modeHoliday">🎄 Holiday</string>


    -------> Toast
    <string name="emptyTitle">Do not leave the title blank</string>
    <string name="emptyNote">Do not leave the note field blank</string>
    <string name="emptyMode">Do not leave the mod section blank</string>
</resources>