<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.add.AddNoteFragment">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@color/black"
                android:fontFamily="@font/satoshi_bold"
                android:gravity="center"
                android:text="@string/addNotes"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/currentDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/satoshi_medium"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/titleEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/press_drawable"
                android:ems="10"
                android:hint="@string/addTitle"
                android:imeOptions="actionDone"
                android:inputType="textPersonName"
                android:paddingHorizontal="10dp"
                android:paddingVertical="10dp"
                android:singleLine="true"
                tools:layout_editor_absoluteX="96dp"
                tools:layout_editor_absoluteY="72dp" />

            <EditText
                android:id="@+id/noteEditText"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="0dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/press_drawable"
                android:ems="10"
                android:gravity="top"
                android:hint="@string/addNote"
                android:imeOptions="actionDone"
                android:inputType="textMultiLine"
                android:paddingHorizontal="10dp"
                android:paddingVertical="10dp"
                tools:layout_editor_absoluteX="56dp"
                tools:layout_editor_absoluteY="221dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/yourMode"
                android:textSize="18sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/modeRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="5dp"
                android:overScrollMode="never" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/yourColor"
                android:textSize="18sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/colorRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="5dp"
                android:clipToPadding="false"
                android:paddingStart="20dp"
                android:overScrollMode="never" />


            <Button
                android:id="@+id/addButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/rounded_10"
                android:backgroundTint="@color/black"
                android:text="@string/add"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp" />


        </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>