<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.edit.EditNoteFragment">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/orange"
        android:fontFamily="@font/satoshi_bold"
        android:gravity="center"
        android:text="@string/editNote"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">


        <EditText
            android:id="@+id/titleEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/press_drawable"
            android:ems="10"
            android:hint="@string/addTitle"
            android:imeOptions="actionDone"
            android:inputType="textPersonName"
            android:paddingHorizontal="10dp"
            android:paddingVertical="10dp"
            android:singleLine="true"
            tools:layout_editor_absoluteX="96dp"
            tools:layout_editor_absoluteY="72dp" />

        <EditText
            android:id="@+id/noteEditText"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_weight="1"
            android:layout_marginBottom="20dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/press_drawable"
            android:ems="10"
            android:gravity="top"
            android:hint="@string/addNote"
            android:imeOptions="actionDone"
            android:inputType="textMultiLine"
            android:paddingHorizontal="10dp"
            android:paddingVertical="10dp"
            tools:layout_editor_absoluteX="56dp"
            tools:layout_editor_absoluteY="221dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginBottom="20dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/updateButton"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_10"
                android:backgroundTint="@color/orange"
                android:text="@string/add"
                android:textAllCaps="false"
                android:layout_marginRight="15dp"
                android:textSize="18sp"
                android:textColor="@color/white"/>

            <ImageView
                android:id="@+id/shareNoteButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/rounded_10"
                android:backgroundTint="@color/blue"
                android:src="@drawable/img_share"
                app:tint="@color/white"
                android:padding="13dp"/>

            <ImageView
                android:id="@+id/deleteNoteButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/rounded_10"
                android:backgroundTint="@color/red"
                android:src="@drawable/img_delete"
                app:tint="@color/white"
                android:padding="13dp"/>


        </LinearLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>